# various

./: .gitignore  README.md
ExampleProject/: README.md
ExampleProject/src/: CMakeLists.txt
ExampleProject/src/ExampleProject/: CMakeLists.txt  DummyClass.hpp  SimpleProfiler.hpp  main.cpp
ExampleProject/src/ExampleProject/ExampleLibrary/: CMakeLists.txt  DummyClass2.cpp  DummyClass2.hpp
ExampleProject/src/cmake_scripts/: LinkTimeOptimization.cmake
ExampleProject/src/doxygen/: doxyfile
ExampleProject/src/tests/: CMakeLists.txt  TestDummyClass.cpp  TestDummyClass2.cpp
Snippits/HelperThread/: HelperThread.hpp  README.md
Snippits/SimpleProfiler/: README.md  SimpleProfiler.hpp
